--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Automato</title>
 </head>
-<body>
+<body style="background-color: red;">
 
-	Automato
-	
+	<img src="imgs\automatoname.png" style="display:block;margin-left: auto;margin-right: auto;">
+
 </body>
 </html>
