--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: red;">
 
-	<img src="imgs\automatoname.png" style="display:block;margin-left: auto;margin-right: auto;">
+	<img src="imgs/automatoname.png" style="display:block;margin-left: auto;margin-right: auto;">
 
 </body>
 </html>
