--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body style="background-color: red;">
 
 	<img src="imgs/AutomatoName.png" style="display:block;margin-left: auto;margin-right: auto;">
+	<img src="imgs/AutomatoName2.png" style="display:block;margin-left: auto;margin-right: auto;">
 
 </body>
 </html>
